# skycalc

./: .gitignore  pyproject.toml
docs/: architecture.md  tutorial.md
examples/: sample_targets.csv  test_frb_targets.csv
skycalc/: __init__.py  run.py
skycalc/config/: telescopes.yaml
skycalc/core/: __init__.py  calculations.py  targets.py  telescope.py
skycalc/gui/: __init__.py  app.py  callbacks.py  components.py
